# mtype

./: Cargo.toml  NOTICE.md  README.md
.github/workflows/: release.yml
src/: app.rs  commandline.rs  config.rs  content.rs  engine.rs  funbox.rs  main.rs  numbers.rs  persistence.rs  results.rs  theme.rs  tui.rs  ui.rs  web.rs  wordgen.rs
